Js to Ts
